--- a/index.html
+++ b/index.html
@@ -4,7 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Appreciation assignment</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Linus Torvalds</h1>
+    </header>
+    <main>
+      <img
+        class="main-image"
+        src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Lc3_2018_%28263682303%29_%28cropped%29.jpeg"
+        alt="linus torvalds"
+      />
+      <article>
+        <h1>Wiki Info</h1>
+        <p>
+          Linus Benedict Torvalds (born 28 December 1969) is a Finnish-American
+          software engineer who is the creator and lead developer of the Linux
+          kernel. He also created the distributed version control system Git. He
+          was honored, along with Shinya Yamanaka, with the 2012 Millennium
+          Technology Prize by the Technology Academy Finland "in recognition of
+          his creation of a new open source operating system for computers
+          leading to the widely used Linux kernel." He is also the recipient of
+          the 2014 IEEE Computer Society Computer Pioneer Award and the 2018
+          IEEE Masaru Ibuka Consumer Electronics Award. Torvalds was born in
+          Helsinki, Finland, the 28th December 1969, the son of journalists Anna
+          and Nils Torvalds,[6] the grandson of statistician Leo Törnqvist and
+          of poet Ole Torvalds, and the great-grandson of journalist and soldier
+          Toivo Karanko. His parents were campus radicals at the University of
+          Helsinki in the 1960s. His family belongs to the Swedish-speaking
+          minority in Finland.
+        </p>
+      </article>
+    </main>
+    <footer></footer>
+  </body>
 </html>
